--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Board</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <%-include('nav', {links:links})%>
@@ -28,5 +29,6 @@
             <%}%>
         </ul>
     </div>
+    <%-include('footer', {footerLink:footerLink})%>
 </body>
 </html>
