--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,4 @@
-<div>
+<div class="footer">
     <h4>Check out my other projects</h4>
     <a href="<%=footerLink[0].link%>">
         <img src="<%=footerLink[0].src%>" alt="<%=footerLink[0].text%>">
