--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,87 @@
+*,
+*::after,
+*::before {
+    padding: 0;
+    margin: 0;
+    font-size: 22px;
+}
+
 body {
-    background-color: rgb(151, 151, 151);
+    color: #edf2f4;
+    background-color: #001d3d;
+}
+
+.nav {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.links ul {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+a {
+    color: #edf2f4;
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+.messagesWrap {
+    padding: 1rem;
+    width: 100dvw;
+}
+
+.title {
+    display: flex;
+    justify-self: center;
+    align-content: center;
+}
+
+.contentWrap {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: .7rem;
+}
+
+.cardWrap{
+    display: flex;
+    justify-content: center;
+}
+
+.messageCard {
+    width: 50dvw;
+    padding: 1rem 1rem .3rem 0;
+    border-bottom: 2px solid #fefefe;
+}
+
+.userTime {
+    padding: .5rem;
+}
+
+.userTime h1 {
+    text-shadow: 0 0 15px #fefefe;
+    font-size: 34px;
+}
+
+.userTime p {
+    font-size: 16px;
+}
+
+.content p{
+    padding: .5rem;
+    font-size: 28px;
+}
+
+.footer img {
+    width: 48px;
+    object-fit: fill;
+    filter: invert();
 }
