--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -9,25 +9,30 @@
 <body>
     <%-include('nav', {links:links})%>
     <div class="messagesWrap">
-        <ul>
-            <%for(let i = 0; i < messages.length; i++) { %> 
-            <div class="messageCard">
-                <span>
-                    <h1>
-                        <%=messages[i].user%> <br>
-                    </h1>
-                    <p>
-                        <%=messages[i].time%>
-                    </p>
-                </span>
-                <span>
-                    <p>
-                        <%=messages[i].text%>
-                    </p>
-                </span>
-            </div>
-            <%}%>
-        </ul>
+        <div class="title">
+            <h1>Messages</h1>
+        </div>
+        <div class="cardWrap">
+            <ul class="contentWrap">
+                <%for(let i = 0; i < messages.length; i++) { %> 
+                <div class="messageCard">
+                    <div class="userTime">
+                        <h1>
+                            <%=messages[i].user%> <br>
+                        </h1>
+                        <p>
+                            <%=messages[i].time%>
+                        </p>
+                    </div>
+                    <div class="content">
+                        <p>
+                            <%=messages[i].text%>
+                        </p>
+                    </div>
+                </div>
+                <%}%>
+            </ul>
+        </div>
     </div>
     <%-include('footer', {footerLink:footerLink})%>
 </body>
