--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -2,7 +2,7 @@
     <div>
         <h1>Message Board</h1>
     </div>
-    <div>
+    <div class="links">
         <ul>
             <%for(let i = 0; i < links.length; i++) { %> 
                 <li>
