--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -34,6 +34,8 @@
             </ul>
         </div>
     </div>
-    <%-include('footer', {footerLink:footerLink})%>
+    <div class="footerWrap">
+        <%-include('footer', {footerLink:footerLink})%>
+    </div>
 </body>
 </html>
