fix css content overflow not working properly

--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -13,7 +13,7 @@
             <h1>Messages</h1>
         </div>
         <div class="cardWrap">
-            <ul class="contentWrap">
+            <div class="contentWrap">
                 <%for(let i = 0; i < messages.length; i++) { %> 
                 <div class="messageCard">
                     <div class="userTime">
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <%}%>
-            </ul>
+            </div>
         </div>
     </div>
     <div class="footerWrap">
