fix data display, fix insert data function

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,22 +7,25 @@
     <link rel="stylesheet" href="formStyle.css">
 </head>
     <body>
-        <%-include('nav', {links:links})%>
+        <%-include("nav", {links:links})%>
         <div class="formWrap">
             <div>
                 <h1>New Message</h1>
             </div>
             <div class="form">
                 <form method="post" action="/new">
+                    <%if(errors || errors.length > 0) { %> 
+                        <p><%=errors%></p>
+                    <%}%>
                     <span>
                         <h2>Name</h2>   
-                        <input name="user" type="text" placeholder="John">
+                        <input name="user" type="text" placeholder="John" id="user">
                     </span>
                     <span>
                         <h2>Message</h2>
-                        <input name="message" type="text"  placeholder="Hello everyone!">
+                        <input name="message" type="text" placeholder="Hello everyone!">
                     </span>
-                    <button>Add</button>
+                    <button type="submit">Add</button>
                 </form>
             </div>
         </div>
