--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -14,7 +14,20 @@
         </div>
         <div class="cardWrap">
             <div class="contentWrap">
-                <%messages%>
+                <%if(messages && messages.length > 0) { %>
+                    <div>
+                        <%messages.forEach((message) => { %>
+                            <div>
+                                <h1><%=message.users%></h1>
+                                <p><%=message.data%></p>
+                            </div>
+                            <div>
+                                <h2>Message</h2>
+                                <p><%=message.message%></p>
+                            </div>
+                        <%})%>
+                    </div>
+                <%}%>
             </div>
         </div>
     </div>
